# nixfmt-rs

./: .gitignore  AUTO_FORMATTING_PLAN.md  BUGS.md  Cargo.toml  ERROR_ENHANCEMENT_PLAN.md  FINDINGS.md  FORMATTING_RESEARCH.md  PLAN.md  PROMPT.md  README.md  REFACTOR-TODO.md  TESTING_SUMMARY.md  TEST_COVERAGE.md  TODO_FIXPARSER.md  flake.nix  not-so-trivial.md  pretty-simple.md  test_bug_finder.py  test_bug_finder.sh  test_nix_compare.py  test_nixfmt_regression.py  test_nixpkgs_compare.py  test_parser.hs
.config/: insta.yaml
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  publish.yml  release-assets.yml  sync-wasm-bindgen.yml
benches/: parser_benchmark.rs
completions/: _nixfmt  nixfmt.bash  nixfmt.fish  nixfmt.nu
docs/: ARCHITECTURE.md  nixfmt.1.scd
examples/: README.md  diff_sweep.rs  error_visualization.rs  parse_loop.rs
fuzz/: Cargo.toml  README.md  coverage.sh  fuzz.sh  seed-corpus.sh
fuzz/fuzz_targets/: fuzz_debug_dumps.rs  fuzz_idempotent.rs  fuzz_nix_compat.rs  fuzz_parse.rs  fuzz_roundtrip.rs
fuzz/seeds/: app-path-head.nix  app-rec-head.nix  compat-less-than.nix  compat-numbers.nix  compat-operators.nix  compat-or-keyword.nix  compat-paths.nix  compat-strings.nix  cr-only.nix  crlf.nix  directive-basic.nix  directive-edge.nix  directive-interp-unclosed.nix  directive-multi.nix  directive-nested.nix  directive-priority-group.nix  directive-string.nix  directive-trailing.nix  directive-unclosed.nix  env-path.nix  exotic-unicode.nix  home-path.nix  indented-edges.nix  indented-interp-lines.nix  indented-merge.nix  indented-trail-comment.nix  inherit-from-select.nix  inherit-selection.nix  interp-absorb.nix  interp-only-line.nix  interp-only.nix  interp-trailing-trivia.nix  interp-trailing-trivia2.nix  lang-annot-list.nix  lang-annot-trail-comment.nix  leading-ws.nix  let-set.nix  list-trail-comments.nix  negation-newline.nix  non-ascii.nix  (+14 more)
fuzz/seeds-invalid/: assert-empty.nix  assert-no-semi.nix  assign-empty.nix  at-id-id.nix  at-nested.nix  at-no-colon.nix  at-set-set.nix  at-set-with-binding.nix  brace-colon.nix  brace-mismatch.nix  dup-formal.nix  empty-interp.nix  expect-expr-got-brace.nix  expect-expr-got-bracket.nix  expect-ident-got-comma.nix  expect-ident-got-eq.nix  formal-after-ellipsis.nix  if-no-else.nix  int-colon.nix  kw-assert-as-ident.nix  kw-else-as-ident.nix  kw-if-as-ident.nix  kw-inherit-as-ident.nix  kw-let-as-ident.nix  kw-or-unexpected.nix  kw-rec-as-ident.nix  kw-then-as-ident.nix  kw-with-as-ident.nix  let-expects-in.nix  let-no-in2.nix  list-mismatch-brace.nix  list-mismatch.nix  member-check-bad.nix  missing-semi-mid.nix  multiline-unclosed-string.nix  non-ascii-after-nl.nix  op-incomplete-brace.nix  op-incomplete-interp.nix  or-backtrack-semi.nix  or-backtrack.nix  (+32 more)
nix/: fuzz-shell.nix  package-pgo.nix  package.nix  reference-nixfmt.nix  shell.nix  source.nix  treefmt.nix  wasm.nix
nix/patches/: 0001-Parser-drop-leading-blank-lines-on-the-file-s-first-.patch  0002-Lexer-keep-a-comment-trailing-after-a-multi-line-tok.patch  0003-Pretty-do-not-hoist-a-lone-language-annotation-off-a.patch  0004-Pretty-suppress-language-annotation-fuse-after-an-op.patch  0005-Pretty-ignore-trivia-in-isAbsorbable-for-Parenthesiz.patch  0006-Pretty-attach-in-comments-to-the-let-body-s-first-to.patch
scripts/: bench.sh  diff_sweep.sh  diff_sweep_full.sh  sync-wasm-bindgen.sh
src/: ast_format_tests.rs  colored_writer.rs  coverage_test.rs  error.rs  ir_format_tests.rs  json_diag.rs  lexer.rs  lib.rs  main.rs  normalize.rs  operator_associativity_test.rs  parameter_tests.rs  parser.rs  postprocess.rs  predoc.rs  pretty.rs  pretty_simple.rs  regression_tests.rs  string_path_tests.rs  types.rs
src/ast/: annotated.rs  expr.rs  items.rs  mod.rs  span.rs  token.rs  trivia.rs
src/doc/: builder.rs  mod.rs
src/dump/: ast.rs  ir.rs  mod.rs
src/error/: context.rs  format.rs  mod.rs  tests.rs
src/format/: absorb.rs  app.rs  base.rs  mod.rs  op.rs  params.rs  stmt.rs  string.rs  term.rs
src/lexer/: comments.rs  cursor.rs  mod.rs  numbers.rs  scan.rs  tests.rs  trivia.rs
src/parser/: binders.rs  containers.rs  expressions.rs  mod.rs  operators.rs  parameters.rs  path_uri.rs  spans.rs  string_processing.rs  strings.rs  term.rs  tests.rs
src/predoc/: builder.rs  mod.rs  render.rs
src/pretty/: absorb.rs  app.rs  base.rs  mod.rs  op.rs  params.rs  stmt.rs  string.rs  term.rs  util.rs
src/pretty_simple/: ast.rs  ir.rs  mod.rs
src/regression_tests/: format.rs  fuzz.rs  ir.rs  mod.rs  parser.rs  properties.rs
src/snapshots/: nixfmt_rs__ast_format_tests__addition.snap  nixfmt_rs__ast_format_tests__assert.snap  nixfmt_rs__ast_format_tests__block_comment.snap  nixfmt_rs__ast_format_tests__boolean_not.snap  nixfmt_rs__ast_format_tests__comparison_operators.snap  nixfmt_rs__ast_format_tests__dotted_path.snap  nixfmt_rs__ast_format_tests__function_application.snap  nixfmt_rs__ast_format_tests__if_then_else.snap  nixfmt_rs__ast_format_tests__indented_string.snap  nixfmt_rs__ast_format_tests__inherit.snap  nixfmt_rs__ast_format_tests__integer.snap  nixfmt_rs__ast_format_tests__let_simple.snap  nixfmt_rs__ast_format_tests__line_comment.snap  nixfmt_rs__ast_format_tests__member_check.snap  nixfmt_rs__ast_format_tests__negation.snap  nixfmt_rs__ast_format_tests__parenthesized.snap  nixfmt_rs__ast_format_tests__relative_path.snap  nixfmt_rs__ast_format_tests__selection_with_default.snap  nixfmt_rs__ast_format_tests__set_pattern.snap  nixfmt_rs__ast_format_tests__simple_lambda.snap  nixfmt_rs__ast_format_tests__simple_list.snap  nixfmt_rs__ast_format_tests__simple_set.snap  nixfmt_rs__ast_format_tests__simple_string.snap  (+54 more)
src/tests_common/: ast_format.rs  (+2 more)
tests/: README.md  ast_format_tests.rs  cli.rs  coverage_test.rs  operator_associativity_test.rs  parameter_tests.rs  regression_tests.rs  string_path_tests.rs
wasm/: Cargo.toml  README.md  package.json
wasm/src/: lib.rs
web/: index.html
(+237 files in other folders)
