[workspace]
members = ["fuzz", "wasm"]
# fuzz needs nightly via cargo-fuzz; wasm only builds for
# wasm32-unknown-unknown. Keep both out of the default set so plain
# `cargo build` / `cargo test` work on stable native toolchains.
default-members = ["."]

[package]
name = "nixfmt_rs"
version = "0.1.0"
edition = "2024"
authors = ["nixfmt-rs contributors"]
description = "Rust implementation of nixfmt with exact Haskell compatibility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joerg/nixfmt-rs"

[[bin]]
name = "nixfmt"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "nixfmt_rs"
path = "src/lib.rs"

[features]
# Pulls in the directory walker and mimalloc allocator used by the `nixfmt`
# binary. Library consumers can disable default features to depend on the
# formatter alone (memchr + compact_str only).
default = ["cli"]
cli = ["dep:ignore", "dep:mimalloc"]

[dependencies]
memchr = "2"
compact_str = "0.9"

# Binary-only deps; neither supports wasm32-unknown-unknown.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ignore = { version = "0.4", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.8"
tempfile = "3"
# examples/diff_sweep.rs only:
rayon = "1"
walkdir = "2"

[[bench]]
name = "parser_benchmark"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
