[workspace]
members = ["fuzz", "wasm"]
# fuzz needs nightly via cargo-fuzz; wasm only builds for
# wasm32-unknown-unknown. Keep both out of the default set so plain
# `cargo build` / `cargo test` work on stable native toolchains.
default-members = ["."]

[package]
name = "nixfmt_rs"
version = "0.2.0"
edition = "2024"
authors = ["nixfmt-rs contributors"]
description = "Rust implementation of nixfmt with exact Haskell compatibility"
license = "MPL-2.0"
repository = "https://github.com/joerg/nixfmt-rs"
keywords = ["nix", "formatter", "nixfmt"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.87"
include = ["/src/**/*", "/benches/**/*", "/examples/*.rs", "/LICENSE*", "/README.md"]

[[bin]]
name = "nixfmt"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "nixfmt_rs"
path = "src/lib.rs"

[features]
default = ["cli"]
# Library consumers disable default features to skip binary-only deps.
cli = ["dep:ignore", "dep:mimalloc", "dep:lexopt", "debug-dump"]
# Enables format_ast/format_ir (Haskell-parity --ast/--ir dumps). No extra deps;
# split from `cli` so the fuzz crate can exercise the dumpers without pulling
# in ignore/mimalloc.
debug-dump = []
# Optional regular deps (not dev-deps) so `cargo test` doesn't compile them.
bench = ["dep:criterion"]
sweep = ["dep:rayon", "dep:walkdir"]

[dependencies]
memchr = "2"
compact_str = "0.9"
criterion = { version = "0.8", optional = true }
rayon = { version = "1", optional = true }
walkdir = { version = "2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ignore = { version = "0.4", optional = true }
lexopt = { version = "0.3", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "parser_benchmark"
harness = false
required-features = ["bench"]

[[example]]
name = "diff_sweep"
required-features = ["sweep"]

[profile.release]
lto = "thin"
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
