[package]
name = "nixfmt-wasm"
version = "0.1.0"
edition = "2024"
authors = ["nixfmt-rs contributors"]
description = "WebAssembly bindings for nixfmt-rs, for embedding in browsers"
license = "MPL-2.0"
repository = "https://github.com/joerg/nixfmt-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nixfmt_rs = { path = "..", default-features = false }
# Pinned: wasm-bindgen schema must match the wasm-bindgen-cli shipped by
# nixpkgs exactly. Bump in lockstep with the CLI version there.
wasm-bindgen = "=0.2.117"
